# SINATRA-Pro

./: LICENSE  README.md
cpp/: README.md
gromacs_file/: mda_contact.py
python_package/: LICENSE  README.md  setup.cfg  setup.py
python_package/data/: .r164s.xtc_offsets.npz  .wt.xtc_offsets.npz
python_package/docs/: RATE.html  gp.html  index.html  reconstruction.html  traj_reader.html
python_package/docs/sinatra_pro/: RATE.html  directions.html  euler.html  gp.html  index.html  mesh.html  reconstruction.html  traj_reader.html
python_package/src/: __main__.py  main.py  reconstruction.py  traj_reader.py
python_package/src/SINATRA_Pro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python_package/src/SINATRA_Pro_Test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_package/src/sinatra_pro/: RATE.py  __init__.py  __main__.py  directions.py  euler.py  gp.py  mesh.py  reconstruction.py  traj_reader.py
python_package/src/sinatra_pro/html/: directions.html  euler.html  mesh.html
python_package/tests/: test.sh
python_package/tests/WT_R164S_65_230_2.0/: notvacuum_DECT_WT_R164S_1_1_0.80_20_norm_offset_0.txt  rates_DECT_WT_R164S_1_1_0.80_20_offset_0.txt  vert_prob_DECT_WT_R164S_1_1_0.80_20_offset_0.txt
python_package/tests/WT_R164S_65_230_2.0/msh_offset_0/R164S_2.0/: R164S_frame1.msh  R164S_frame2.msh  R164S_frame3.msh
python_package/tests/WT_R164S_65_230_2.0/msh_offset_0/WT_2.0/: WT_frame2.msh  WT_frame3.msh  WT_frame6.msh
python_script/: RATE.py  add_off_heat.py  calc_rmsd.py  calc_rmsf.py  control_simulation.py  convert_traj_mesh.py  direction_pruning.py  directions.py  euler.py  gp.py  knockoff.R  main.py  main_SINATRA.py  main_SINATRA_control_simulation.py  main_SINATRA_control_simulation_hemisphere.py  main_SINATRA_control_simulation_remove_part.py  main_all_steps.py  main_calc_ec.py  main_calc_ec_parallel.py  main_convert_traj_mesh.py  main_gp.py  main_offsets.py  main_python_mpi.py  main_reconstruction_threshold.py  mesh.py  reconstruction.py  simplices_construction.py  svd_signflip.py  test.sh  test_gp.py  traj_reader.py
test_script/: :wq  RATE.py  convert_traj_off.py  directions.py  distance_based_filtration.py  edges.txt  ess.py  euler.py  gp.py  main.py  main_calculate_ec.py  main_gpclassification.py  mesh.py  mesh_old.py  (+10 more)
(+95 files in other folders)
