[metadata]
name = sinatra-pro
version = 0.0.1
description = Python3 package for SINATRA Pro
#author = Wai Shing Tang
long_description = file: README.md
license = GNU General Public License v3.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
scripts =
    src/RATE.py
    src/__init__.py
    src/directions.py
    src/euler.py
    src/gp.py
    src/main.py
    src/mesh.py
    src/reconstruction.py
    src/traj_reader.py
install_requires = [
    'numpy>1.18.0',
    'scipy>1.5.0',
    'mdanalysis>0.20.0',
    'joblib>0.16.0'
]

[options.packages.find]

