[metadata]
name = sinatra_pro_test
version = 0.0.10
description = Python3 package for SINATRA Pro
author = Wai Shing Tang
#long_description = file: README.md
license = GNU General Public License v3.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy>=1.18.0
    scipy>=1.5.0
    mdanalysis>=0.20.0
    joblib>=0.16.0

[options.packages.find]
include=mdanalysis, numpy, scipy, joblib

