[metadata]
name = Sinatra Pro Test
version = 0.0.23
author = Wai Shing Tang
description = Python3 package for SINATRA Pro.
long_description = file: README.md
url = https://github.com/lcrawlab/SINATRA-Pro
project_urls =
    Bug Tracker = https://github.com/lcrawlab/SINATRA-Pro/issues
license = GNU General Public License v3.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy>=1.18.0
    scipy>=1.5.0
    mdanalysis>=0.20.0
    fast-histogram>=0.9
    joblib>=0.16.0

[options.packages.find]
include=mdanalysis, numpy, scipy, joblib

